# 6502-emulator

./: CMakeLists.txt  README.md  functions.h  main.c  operations.c  tabella.py
